prevent collapsible footer from cutting off the view content

--- a/src/modules/app/less/app.less
+++ b/src/modules/app/less/app.less
@@ -1,7 +1,7 @@
 #main_responsive_state {
-	@media @breakpoint-1, @breakpoint-2-2 {
+	@media @breakpoint-mobile {
 		& {
-			will-change: contents;
+			will-change: contents; // This gets read in app.jsx on mount + reset to auto
 		}
 	}
 }
